fix horizontal scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 .nav__section {
+  min-width: 800px;
   box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25);
   background: rgba(34, 34, 35, 0.8);
 }
